--- a/FormStyle.css
+++ b/FormStyle.css
@@ -44,6 +44,19 @@ body {
   margin-left: 50px;
   margin-right: 50px;
 }
+.BorderRoundCenter {
+  display: block;
+  max-width: 100%;
+  max-height: 135vh;
+  padding: 10px;
+  margin: auto;
+  
+  border-radius: 50px;
+  border-color: #d1d1d1;
+  
+  border-style: inset;
+  border-width: 0px 0px;
+}
 .BorderRound {
   border-radius: 25px;
   border-color: #000000;
