--- a/FormStyle.css
+++ b/FormStyle.css
@@ -44,9 +44,43 @@ body {
   margin-left: 50px;
   margin-right: 50px;
 }
+
+.LineOff {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border-bottom: 15px solid black;
+	
+}
+.LineOffRound {
+  border-color: #000000;
+  border-style: solid;
+  padding: 25;
+  border-radius: 15px;
+  border-left: 10px solid black;
+  border-right: 10px solid black;
+  /*border-bottom: 15px solid black;*/
+	
+}
+
+.videoInsert {
+    position: absolute; 
+    right: 0; 
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    width: auto; 
+    height: auto; 
+    z-index: -100;
+    background-size: cover;
+    overflow: hidden;
+}
+
 .BorderRoundCenter {
   display: block;
-  max-width: 100%;
+  max-width: 80%;
   max-height: 135vh;
   padding: 10px;
   margin: auto;
