--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,21 @@ body {
   border-bottom: 1px solid black;
 }
 
+.BorderRoundCenterButton {
+	
+  display: block;
+  max-width: 80%;
+  max-height: 135vh;
+  padding: 10px;
+  margin: auto;
+  font-size: 20px;
+  border-radius: 50px;
+  border-color: #d1d1d1;
+  
+  border-style: inset;
+  border-width: 0px 0px;
+}
+
 .tab {
   cursor: pointer;
   padding: 10px;
